--- a/style.css
+++ b/style.css
@@ -17,6 +17,10 @@
     left: 30px;
     top: 15px;
     margin: 20px 0 0 20px;
+    cursor: pointer;
+}
+.logo:hover{
+   filter: invert();
 }
 .menu{
     
